// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays failure if the resource is not found 1`] = `
<div
  id="composition-number"
>
  <p
    className="MuiTypography-root-1 MuiTypography-body1-10"
  >
    current composition: 
    failed
  </p>
</div>
`;

exports[`displays the composition number 1`] = `
<div
  id="composition-number"
>
  <p
    className="MuiTypography-root-1 MuiTypography-body1-10"
  >
    current composition: 
    1
  </p>
</div>
`;
